# Mizaan-Revamp

./: .gitignore  MIZAAN_LOOP_REPORT.md  SECURITY_CLASSIFICATION.md  eslint.config.js  package-lock.json  package.json  vitest.config.ts
docs/: AGENT_RUNBOOK.md  FAST_PHASE_PROMPT_TEMPLATE.md  NEXT_PHASE_QUEUE.md  PHASE_CLOSEOUT_TEMPLATE.md  PHASE_TEMPLATE.md  QA_CHECKLIST.md  RED_FLAG_SCAN_RULES.md  current-codebase-baseline-audit.md
docs/Phases/: mizaan-phase-1-folder-selection.md  mizaan-phase-1-implementation-audit.md  mizaan-phase-1-report.md  mizaan-phase-2-vault-abstraction-plan.md  mizaan-phase-2-vault-abstraction-report.md  mizaan-phase-3-pseudocode.md  mizaan-phase-3-vault-lifecycle-plan.md  mizaan-phase-3-vault-lifecycle-report.md  mizaan-phase-4-5-master-plan-implementation-audit.md  mizaan-phase-4-5-pseudocode.md  mizaan-phase-4-5-workspace-database-plan.md  mizaan-phase-4-5-workspace-database-report.md  mizaan-phase-4-master-plan-implementation-audit.md  mizaan-phase-4-page-workspace-plan.md  mizaan-phase-4-page-workspace-report.md  mizaan-phase-4-pseudocode.md  mizaan-phase-5-native-windows-blueprint.md  mizaan-phase-6-native-windows-blueprint.md  phase-async-provider-refactor-stabilization.md  phase-finance-foundation.md  (+34 more)
scripts/: mizaan-browser-qa.ps1  mizaan-phase-closeout.ps1  mizaan-preflight.ps1  mizaan-red-scan.ps1  mizaan-verify-fast.ps1  mizaan-verify-full.ps1  phase4-browser-qa.mjs  phase45-browser-qa.mjs  run-vitest-serial.ps1
src/: routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+136 files in other folders)
