[package]
name = "mizaan"
version = "0.1.0"
description = "Mizaan local-first desktop shell"
authors = ["Mohammad Yahya"]
license = ""
repository = "https://github.com/mhyahya854/Mizaan-Revamp"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mizaan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
